<resources>
    <string name="app_name">Prestamos UCC</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aun no te has registrado?</string>
    <string name="label_register">Registro Usuario</string>
    <string name="label_name">Nombre</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Bienvenido por favor ingresa tus datos para registrarte</string>
    <string name="btn_create_prestamo_audiovisuales">Prestamo audiovisuales</string>
    <string name="btn_create_prestamo_salida_bien">Salida bienes fijos</string>
    <string name="btn_create_prestamo_parqueadero">Parqueadero bicicleta</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_CrearPrestamo">Prestamo audiovisuales</string>
    <string name="label_Ciudad">Ciudad</string>
    <string name="label_bloque">Bloque</string>
    <string name="label_direccion">Direccion bloque / casa</string>
    <string name="label_Salon_oficina">Salon / Oficina</string>
    <string name="label_cargo_programa">Cargo / Porgrama</string>
    <string name="label_descripcion">Descripcion</string>
    <string name="btn_hacer_solicitud">Continuar</string>
    <string name="label_SolicitudPrestamo">Prestamo</string>
    <string name="btnInicio">Inicio</string>
    <string name="btn_mis_prestamos">Mis Prestamos</string>
    <string name="label_my_prestamos">Mis prestamos</string>
    <string name="press_back_again">Presione una ves más para salir</string>
    <string name="dialog_create_prestamo_exit_title">¿Seguro que deseas salir?</string>
    <string name="dialog_create_prestamo_exix_message">Si abandonas ahora, los datos has que ingresaste se perderán.</string>
    <string name="dialog_create_prestamo_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_prestamo_exit_negative_btn">Continuar la solicitud</string>
    <string name="label_confirm_prestamo_data">Datos del prestamo</string>
    <string name="btn_guardar_solicitud">Enviar solicitud</string>
    <string name="error_login_response">Respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y una contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="item_prestamo_id">Prestamo #: %1$s</string>
    <string name="item_prestamo_usuario">Nombres: %1$s</string>
    <string name="item_prestamo_bloque">Lugar / Bloque: %1$s</string>
    <string name="item_prestamo_direccion">Salon / Oficina:  %1$s</string>
    <string name="item_prestamo_programa">Programa / Cargo:  %1$s</string>
    <string name="item_prestamo_estado">Estado:  %1$s</string>
    <string name="item_prestamo_descripcion">Descripcion:  %1$s</string>
    <string name="item_prestamo_userid">Id usuario:  %1$s</string>
    <string name="item_prestamos_surnameuser">Apellidos:  %1$s</string>
    <string name="item_prestamos_celular">Cedula:  %1$s</string>
    <string name="item_prestamo_ciudad">Ciudad:  %1$s</string>
    <string name="item_prestamo_activo">Activo:  %1$s</string>
    <string name="item_prestamo_detalle">Mas detalles</string>
    <string name="item_prestamo_serial">Serial:  %1$s</string>
    <string name="item_prestamo_placa">Placa:  %1$s</string>
    <string name="item_prestamo_celular">Celular:  %1$s</string>
    <string name="item_prestamo_referencia">Referencia:  %1$s</string>
    <string name="item_prestamo_cantidad">Cantidad:  %1$s</string>
    <string name="item_prestamo_salidapor">Salida por:  %1$s</string>
    <string name="item_prestamo_editadopor">Editado por:  %1$s</string>
    <string name="item_prestamo_creado">Creado:  %1$s</string>
    <string name="item_prestamo_actualizado">Actualizado:  %1$s</string>
    <string name="create_prestamo_success">Solicitud enviada correctamente!!</string>
    <string name="create_prestamo_error">Error inesperado al registrar su prestamo</string>
    <string name="label_celular_programa">Celular</string>
    <string name="label_celular">3144534311</string>
    <string name="label_password_confirmation">Confirmar clave</string>
    <string name="error_register_empty_fiels">Por favor completar todos los campos</string>
    <string name="error_register_password_do_not_match">Las contraseñas no coinciden</string>
    <string name="label_surname">Apellido</string>
    <string name="error_register_validation">Ocurrió un error en el registro</string>
    <string name="label_register_celular">Celular</string>
    <string name="label_cedula">Cedula</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="label_version">Version 1.0</string>
    <string name="navigation_drawer_open">ok</string>
    <string name="navigation_drawer_close">ok1</string>
    <string name="btn_abrir_scaner">Escanear codigo</string>
    <string name="txt_scaner">Escanear Codigo</string>
    <string name="txt_Titulo">Ecaneo</string>
    <string name="txt_DatoQR1">Resultado</string>
    <string name="boton_ver_registros">Inicio</string>
    <string name="txt_Notificar">Correo</string>
    <string name="botonNotificar">Enviar</string>
    <string name="boton">Consultar</string>
    <string name="label_go_to_poliica">Tratamiento de datos</string>
    <string name="title_activity_menu22">Menu2Activity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>