<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.MenuActivity">


    <EditText
        android:id="@+id/etqr"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:ems="40"
        android:enabled="false"
        android:focusable="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnQR"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:onClick="btnEscaner"
        android:paddingStart="60dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_abrir_scaner"
        app:backgroundTint="@color/btnsprimary"
        app:icon="@drawable/ic_baseline_qr_code_scanner_24" />


    <Button
        android:id="@+id/btnCrearPrestamo"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:paddingStart="60dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_create_prestamo_audiovisuales"
        app:backgroundTint="@color/btnsprimary"
        app:icon="@drawable/computador" />

    <Button
        android:id="@+id/btnCrearPrestamoBien"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:paddingStart="60dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_create_prestamo_salida_bien"
        app:backgroundTint="@color/btnsprimary"
        app:icon="@drawable/oficina" />

    <Button
        android:id="@+id/btnCrearPrestamoParqueadero"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:paddingStart="60dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_create_prestamo_parqueadero"
        app:backgroundTint="@color/btnsprimary"
        app:icon="@drawable/bici" />

    <Button
        android:id="@+id/btnMisPrestamos"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:paddingStart="60dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_mis_prestamos"
        app:backgroundTint="@color/btnsprimary"
        app:icon="@drawable/lista" />


    <Button
        android:id="@+id/btnlogout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:paddingStart="60dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_log_out"
        app:backgroundTint="@color/btnsprimary"
        app:icon="@drawable/power_off" />

</LinearLayout>





