<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/logo"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@drawable/logo"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView

            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:layout_weight="3"
            android:paddingTop="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/label_login"/>

        <LinearLayout
            android:background="@color/transparent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:text="@string/label_email"/>

            <EditText
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/label_password"/>

            <EditText
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                app:backgroundTint="@color/btnsprimary"
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_login"/>

            <TextView
                android:id="@+id/tvGoToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/label_go_to_register"/>

        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>




